--- a/src/components/Status.css
+++ b/src/components/Status.css
@@ -1,14 +1,36 @@
-
-
-
-
-.filter-section {
+.qr-code-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
     display: flex;
+    justify-content: center;
     align-items: center;
-    /* margin-bottom: 20px; */
+    z-index: 1000;
 }
 
-.filter-section button {
-    margin-left: 10px; 
-    padding: 5px 10px; /* Padding for the button */
+.modal-content {
+    position: relative;
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 500px;
+    text-align: center;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.qr-code-image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
 }
